# media-advisor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.cursor/plans/: python-rewrite-pydanticai_c8717188.plan.md
.github/workflows/: advisor-quality-gate.yml  advisor-quality-nightly.yml
analysis/azzurro-fluido/: 2YfD36vWSss.json  2cwtoODMg5U.json  2u3PlsvS3Qk.json  3OOMjxI6254.json  44ElIrZ2mFA.json  4RwHwjlMPzM.json  (+76 more)
channels/: README.md  _tmp_single.json  azzurro-fluido.json  calciomercato-it.json  channels.json  fabrizio-romano-italiano.json  neschio.json  nico-schira.json  open-var.json  pending.json  tuttomercatoweb.json  umberto-chiariello.json  video-dates.json
docs/: advisor-quality-roadmap.md  advisor-quality-rollout.md  advisor-quality-task-breakdown.md  advisor-scoring-methodology.md  commands.md  pipeline-design.md  project-overview.md  tech-stack.md
eval/: advisor-quality-baseline.json  metrics.ts  run-baseline.ts  run-eval.ts  run_baseline.py  videos_sample.json
mercato/: index.json  player-aliases.json  player-tm-ids.json  transfers.json
scripts/: add-punto-chiaro.ts  analyze-single.mjs  backfill-dates.ts  dev-kill.mjs  eval-advisor-gate.ts  eval-advisor-quality.ts  migrate-transcripts.ts
server/: __init__.py  api.py  api.ts
src/: analyze-batch.ts  analyze-v2.ts  channel-advisor.ts  channel-analyze.ts  channel-resolver.ts  cli-analyze.ts  cli-auto-update.ts  cli-channel-analyze.ts  cli-fetch-preview.ts  cli-from-list.ts  cli-transcript.ts  fetch-new-videos.ts  index.ts  merge-pending.ts  paths.ts  run-from-list.ts  save-transcript.ts  transcript-client.ts  video-metadata.ts
web/: .env.local.example  index.html  package-lock.json  package.json  vite.config.js
(+2284 files in other folders)
