[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "media-advisor"
version = "0.1.0"
description = "Media Advisor (Python rewrite scaffold)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Media Advisor contributors" }]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pydantic-ai>=0.0.14",
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "mcp>=1.0.0",
  "fastapi>=0.135.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "types-requests>=2.32.0.20240914",
]

[project.scripts]
media-advisor = "media_advisor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/media_advisor"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "node_modules",
  "dist",
  "analysis",
  "transcripts",
  "web",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["media_advisor"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
mypy_path = ["src"]

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
